fixed alignment of component blocks on project form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,7 +79,7 @@ a {
 }
 
 .selected-components {
-	margin: 0 auto;
+	justify-self: center;
 }
 
 .comment {
